CSS cleanup and add z-index to fix position absolute issue

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,6 +4,7 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100%;
   height: 120px;
