--- a/public/styles/posted.css
+++ b/public/styles/posted.css
@@ -12,7 +12,6 @@
 }
 
 .tweetFeed header {
-  flex-direction: row;
   background-color: #f4f1ec;
   color: #000000;
   font-family: 'Source Sans Pro', sans-serif;
